esp_quick_dma_go() gets called from the MI ncr53c9x_intr() handler, which protects itself against multiple invocation with a simple_lock. Follow the example of ncr53c9x_poll() for servicing an interrupt that came while we run in splhigh(), and 'manually' unlock the MI handler for calling ncr53c9x_intr().

Fixes PR mac68k/38758.